--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Desarrollo Backend - Tercer entregable</title>
-    <script src="main.js"></script>
+    <script src="productManager.js"></script>
 </head>
 <body>
     
